X and O renders on page in correct order.

--- a/index.html
+++ b/index.html
@@ -4,30 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Crew's Tic-Tac-Toe</title>
-    <script> src="app.js"</script>
+    <title>Document</title>
 </head>
 <body>
-    <header>Crew's Tic-Tac-Toe</header>
-    <button>Reset Game</button> <!-- I think the easiest way to make this work without reloading the page would be to have it ierate through the table replacing all cells with blank-->
-    <div id="game-board"><table>
-        <tbody>
-            <tr>
-                <td><button onclick="alert('Hello, world');" class="game-square" id="0"></button></td>
-                <td><button onclick="alert('Hello, world');" class="game-square" id="1"></button></td>
-                <td><button onclick="alert('Hello, world');" class="game-square" id="2"></button></td>
-            </tr>
-            <tr>
-                <td><button onclick="alert('Hello, world');" class="game-square" id="3"></button></td>
-                <td><button onclick="alert('Hello, world');" class="game-square" id="4"></button></td>
-                <td><button onclick="alert('Hello, world');" class="game-square" id="5"></button></td>
-            </tr>
-            <tr>
-                <td><button onclick="alert('Hello, world');" class="game-square" id="6"></button></td>
-                <td><button onclick="alert('Hello, world');" class="game-square" id="7"></button></td>
-                <td><button onclick="alert('Hello, world');" class="game-square" id="8"></button></td>
-            </tr>
-        </tbody>
-    </table></div>
+    <header>"Crew's Tic Tac Toe"</header>
+    <button>"Reset Game"</button>
+    <table style="width:100%">
+        <tr id="row1">
+          <td class="cell" id="0"></td>
+          <td class="cell" id="1"></td>
+          <td class="cell" id="2"></td>
+        </tr>
+        <tr id="row2">
+          <td class="cell" id="3"></td>
+          <td class="cell" id="4"></td>
+          <td class="cell" id="5"></td>
+        </tr>
+        <tr id="row3">
+          <td class="cell" id="6"></td>
+          <td class="cell" id="7"></td>
+          <td class="cell" id="8"></td>
+        </tr>
+      </table>
+
+    <script src='app.js'></script>
 </body>
+<style>
+  table, th, td {
+    border: 1px solid black;
+    padding: 45px;
+  }
+  </style>
 </html>
