--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>"Crew's Tic Tac Toe"</header>
-    <button>"Reset Game"</button>
+    <button id="button">"Reset Game"</button>
     <table style="width:100%">
         <tr id="row1">
           <td class="cell" id="0"></td>
